# compiler-RM-dap2

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh
backend/: .env.example  README.md  api.py
frontend/: Dockerfile  README.md  config.js  index.html  main.js  styles.css  vercel.json
src/register_machine/: HOW_TO_ADD_INSTRUCTION.md  __init__.py  cli.py
src/register_machine/compiler/: __init__.py  ast_nodes.py  diagnostics.py  ir.py  lexer.py  lowering.py  parser.py  semantic.py  symbols.py  tokens.py
src/register_machine/examples/: countdown.rm  multiply.rm  sum.rm
src/register_machine/tests/: test_lexer.py  test_lowering.py  test_parser.py  test_semantic.py  test_vm.py
src/register_machine/vm/: __init__.py  execution.py  instruction_set.py  machine.py  registers.py
